src/tests/testfiles/binary-operators/types-29.txt
Error at 2:5: Logic operator operands must have the same type (have int and char[])
5 || "&";
^
